添加文档, 添加前端client
